# eval-analysis-public

./: .gitignore  LICENSE  README.md  dvc.yaml  example_analysis.ipynb  params.yaml  pyproject.toml
.devcontainer/: devcontainer.json
conf/: config.yaml
conf/figs/: overtime.yaml
conf/stages/: overtime.yaml
data/processed/: ga_swebench_comparison_table.tex
fig_params/: figs.yaml
ga-paper/: dvc.yaml  params.yaml
ga-paper/data/: .gitignore  summary_examples.txt
ga-paper/src/: generate_latex_tables.py  task_summaries.py
ga-paper/tests/: test_generate_latex_tables.py
metrics/: baseline_statistics.yaml  multiverse_boxplot.yaml
metrics/costs/: savings_info.csv  savings_non_bucketed_info.csv
reports/inspect-transition/: dvc.yaml  params.yaml
reports/inspect-transition/fig_params/: figs.yaml
reports/sonnet-4-5/: dvc.yaml  params.yaml
reports/sonnet-4-5/fig_params/: figs.yaml
reports/time-horizon-1-0/: dvc.yaml  params.yaml
reports/time-horizon-1-0/data/: .gitignore
reports/time-horizon-1-0/fig_params/: figs.yaml
reports/time-horizon-1-1/: dvc.yaml  params.yaml
src/: ga_swebench_comparison_table.py
src/generate/: synthetic_tasks.py
src/horizon/: agent_summary.py  compare_doubling_times.py  compare_trend.py  compute_task_weights.py  compute_trendline_ci.py  generate_benchmark_results.py  token_usage_distribution.py
src/plot/: bar_chart.py  bootstrap_ci.py  cost.py  generate_model_task_table.py  individual_histograms.py  logistic.py  logistic_multiverse.py  multiverse_boxplot.py
src/wrangle/: bootstrap.py  logistic.py
(+15 files in other folders)
